fix: switched authentication to use Firebase
Signed-off-by: Eduardo Morales <emoral435@gmail.com>

--- a/frontend/src/context/css-vars.css
+++ b/frontend/src/context/css-vars.css
@@ -1,12 +1,14 @@
 /* defined CSS variables to be used to toggle different colors */
 body[data-theme='light'] {
-  --colors-primary: deeppink;
-  --colors-background: white;
+  --colors-primary: #a388ee;
+  --colors-secondary: #6d3df1;
+  --colors-background: #e3dff2;
   --text-color-primary: black;
 }
 
 body[data-theme='dark'] {
-  --colors-primary: white;
+  --colors-primary: #a388ee;
+  --colors-secondary: #6d3df1;
   --colors-background: black;
   --text-color-primary: white;
 }
